--- a/css/main.css
+++ b/css/main.css
@@ -16,18 +16,12 @@ main { width: 100%; background-color: #EAFBFF;}
   color: white;
   padding: 1em;
   height: 80px;
-}
 
-.sector {
-  padding: 10px 12px;
-  color: white;
-  background-color: #333;
-  border-radius: 8px;
+  position: sticky;
 }
 
 .bannerCon {
   color: white;
-  padding: 2em;
 }
 
 .bodyCon {
@@ -35,12 +29,23 @@ main { width: 100%; background-color: #EAFBFF;}
   padding: 2em;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
 }
 
 .footerCon {
-  display: flex;
-  flex-direction: column;
+  height: 200px;
+  display: grid;
+  grid-template-columns: 1.5fr 2fr;
+  grid-template-rows: 1fr 1fr;
+  grid-gap: 10px;
+
+  grid-template-areas:
+    "MainNavCon MainNavCon"
+    "SubNavCon SubNavCon"
 }
+#MainNavCon { grid-area: MainNavCon; justify-content: space-between; align-items: center;}
+#SubNavCon { grid-area: SubNavCon; justify-content: space-between;}
 
 /* ----------- Header starts --------   */
 
@@ -54,7 +59,7 @@ main { width: 100%; background-color: #EAFBFF;}
   height: 10px;
   display: flex;
   align-items: center;
-  margin: 15px;
+  margin: 1em;
 }
 
 #logoCon:hover { transform: scale(1.08); }
@@ -91,6 +96,7 @@ main { width: 100%; background-color: #EAFBFF;}
   -ms-transform: rotate(90deg);
   transform: rotate(90deg);
 }
+
 
 #mainNav li a {
   font-weight: 900;
@@ -140,27 +146,49 @@ main { width: 100%; background-color: #EAFBFF;}
   padding-top: 10px;
 	padding-left: 10px;
 	padding-right: 10px;
-	height: 464px;
-	background-image: url(../images/lo-res_MOBILE/promo/Mobile_beer_promo1.jpg);
+
+	/*background-image: url(../images/lo-res_MOBILE/promo/Mobile_beer_promo1.jpg);*/
+  background-image: url(../video/gif/grolsch_0Alcohol_promo1_Mobile.gif);
 	background-repeat: no-repeat;
 	background-position: center;
   background-size: cover;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+
+}
+.textBannerBlock {
+  display: block;
+  text-align: center;
+  margin: 20em auto auto auto;
+  width: 100%;
+
+  animation: bannerAnim 4.1s steps(10) infinite;
 }
 
-#imageBanner h2 {
-	font-size: 30px;
+@keyframes bannerAnim {
+  0% { opacity: 0%;}
+  35% { opacity: 0%;}
+  45% { opacity: 100%;}
+  90% { opacity: 100%;}
+  100% { opacity: 0%;}
+
+}
+
+.textBannerBlock h2 {
+	font-size: 3em;
 	font-weight: bold;
 	color: #312783;
-	text-align: center;
-	margin-top: 75%;
 }
 
-#imageBanner p {
+.textBannerBlock p {
 	font-size: 15px;
 	color: #312783;
+  margin-top: -1em;
 	line-height: 20px;
-  text-align: center;
-	margin-bottom: 10px;
+	margin-bottom: 1em;
 }
 
 
@@ -170,11 +198,13 @@ main { width: 100%; background-color: #EAFBFF;}
   background-color: #E10B14;
 	color: #fff;
   border-radius: 5px;
-	padding: 15px 0;
+	padding: 10px 0;
+
 	text-align: center;
 	text-decoration: none;
-	font-size: 15px;
-	margin: 0 auto;
+	font-size: 20px;
+  font-weight: 800;
+	margin: auto auto 20px auto;
 }
 
 #seeMore:hover {
@@ -189,13 +219,15 @@ main { width: 100%; background-color: #EAFBFF;}
 	width: 350px;
   height: 250px;
 	color: #fff;
-	margin: 20px auto;
-	display: block;
+	margin: 20px;
 	text-align: center;
-	padding: 20px 0 20px 0;
+	padding: 20px;
 	border-radius: 10px;
 	font-size: 15px;
 
+  display: flex;
+  box-sizing: content-box;
+  position: relative;
   justify-content: flex-end;
 
 }
@@ -205,28 +237,29 @@ main { width: 100%; background-color: #EAFBFF;}
 .homeBodyCon a {text-decoration: none; color: white;}
 
 .textBoxCon {
-  background-color: black;
-  opacity: 70%;
-  margin-top: 40%;
-  padding: 10px 0 10px 0;
-	border-radius: 0px 0px 10px 10px;
+  background-color: transparent;
+  margin-top: 20%;
+  margin-left: 10%;
+  padding: 10px;
 }
 
 .textBoxCon h2 { font-weight: 900; }
 
 .historyHome {
-  background-image: url(../images/lo-res_MOBILE/context/Mobile_home_history_btn.jpg);
+  background-image: url(../images/hi-res_WEB/context/Web_home_history_btn.jpg);
 	background-repeat: no-repeat;
 	background-position: center;
   background-size: cover;
 }
 
 .beerHome {
-  background-image: url(../images/lo-res_MOBILE/products/Mobile_home_beer_btn.jpg);
+  background-image: url(../images/hi-res_WEB/products/Web_home_beer_btn.jpg);
 	background-repeat: no-repeat;
 	background-position: center;
   background-size: cover;
 }
+
+ .titleBeer{color: #312783;}
 
 /* ----------- Footer starts --------   */
 
@@ -239,47 +272,45 @@ main { width: 100%; background-color: #EAFBFF;}
   flex-direction: row;
 }
 
-#navBoxfooter{
-  display: flex;
-  flex-direction: row;
-}
+#footerNavCon nav { width: auto; margin: auto; }
 
-#navBoxfooter li a {
-	display: block;
-  width: 80px;
-	color: #fff;
-	padding: 10px 0 10px 0;
-	text-align: center;
+#footerNavCon nav ul { overflow: hidden; list-style: none;}
+
+#footerNavCon nav ul li { float: left;}
+
+#footerNavCon nav ul li a{
+  display: block;
+
+  width: 120px;
+  color: #fff;
+  text-align: center;
+	padding: 10px;
   font-weight: bold;
-  font-size: 12px;
+  font-size: 15px;
   text-decoration: none;
 }
 
-#navBoxfooter li {
-  border-left: 1px solid #fff;
-  border-bottom: none;
-  display: inline;
-  margin-left: 20px;
-}
-
-#navBoxfooter li:first-child { border-left: 0px; }
-
-#navBoxfooter li:last-child { margin-right:10px; }
-
-#navBoxfooter li a:hover {
+#footerNavCon nav ul li a:hover {
   color: #2472B8;
   border-bottom: 3px solid #2472B8;
-  padding-bottom: 5px;
-  background-color: transparent;
 }
 
 #copyRight {
   width: 70%;
-  font-size: 10px;
+  font-size: 12px;
+  line-height: 1.2em;
+  margin-right: 15px;
+}
+
+#copyRight p { margin-bottom: 1.5em; }
+
+#footerSubNav {
+  width: 110px;
 }
 
 #footerSubNav svg {
-  width: 30px;
+  width: 35px;
+  margin: 5px;
 }
 
 #footerSubNav svg:hover {
@@ -289,94 +320,113 @@ main { width: 100%; background-color: #EAFBFF;}
 
 /* ----------- screens diplay - Responsive --------   */
 
-@media screen and (min-width: 620px) {
+@media screen and (min-width: 640px) {
   main { width: 100%; margin: auto;}
 
-
-/* --- menu starts for screen 620px ---   */
-
-  #button { display: none; }
-
-  #burgerCon {
-    /*display: block;*/
-    display: flex;
-    flex-direction: row;
-    margin: 0;
-  }
-
-  #mainNav {
-    text-align: right;
-    text-transform: uppercase;
-    margin-left: auto;
-  }
-
-  #burgerMenu { text-align: right; }
-
-  #mainNav li {
-    border-bottom: none;
-    display: inline;
-    margin-left: 20px;
-  }
-
-  #mainNav li a {
-    background-color: #2472B8;
-    display: inline;
-    padding: 5px 0 5px 0;
-    text-decoration: none;
-    color: #fff;
-  }
-
-  #mainNav li a:hover {
-    background-color: #fff;
-    color: #2472B8;
-    padding-bottom: 5px;
-  }
-
-  #mainNav li:first-child  { border-top: none; }
-
-  #mainNav li:last-child { margin-bottom: 0; }
-
-  /*descendent selector, don't want to affect order buttons below*/
-  #burgerCon .logInButton  {
-    margin: auto;
-    padding: 15px 5px 15px 5px;
-  }
-
-/* ----------- Body starts --------   */
+/* ----------- Main Banner starts --------   */
 
   #imageBanner {
     width: auto;
-    background-image: url(../images/hi-res_WEB/promo/Web_beer_promo1.jpg);
-    background-size: cover;
+    height: 500px;
+    /*background-image: url(../images/hi-res_WEB/promo/Web_beer_promo1.jpg);*/
+    background-image: url(../video/gif/grolsch_0Alcohol_promo1_WEB.gif);
+    background-position: center;
+    flex-direction: row;
   }
 
-  #imageBanner h2 {
+  .textBannerBlock {
     text-align: left;
-    margin-top: auto;
-    margin-left: 2em;
-    font-size: 60px;
+    align-content: flex-start;
+    align-items: flex-start;
+    justify-content: flex-start;
+    margin: auto 0 auto 1em;
+    width: 50%;
+    animation: stop;
   }
 
-  #imageBanner p {
+  .textBannerBlock h2 {
     text-align: left;
-    margin-left: 2em;
-    font-size: 30px;
+    font-size: 4em;
   }
+
+  .textBannerBlock p {
+    text-align: left;
+    font-size: 1.3em;
+    margin-left: 1.3em;
+  }
+
+  #seeMore {
+  	margin-left: 1.3em;
+  }
+
+  /* ----------- home bodyContainer starts --------   */
 
   .bodyCon { flex-direction: row; }
 
+  /* ----------- footer starts --------   */
+
+  #copyRight {
+    width: 80%;
+    font-size: 14px;
+  }
+
 }
 
-/* ----------- home bodyContainer starts --------   */
-
-/* ----------- footer starts --------   */
-
-.footerCon {
-  flex-direction: column;
-}
 
 
 
 @media screen and (min-width: 1200px) {
   main {width: 1200px; margin: auto; }
+
+  /* --- menu starts for screen 620px ---   */
+
+    #button { display: none; }
+
+    #burgerCon {
+      /*display: block;*/
+      display: flex;
+      flex-direction: row;
+      margin: 0;
+    }
+
+    #logoCon { margin-right: 5em;}
+
+    #mainNav {margin: auto;}
+
+    #burgerMenu { text-align: right; overflow: hidden;}
+
+    #mainNav li {
+      display: inline-block;
+      padding: 20px;
+      border-color: transparent;
+    }
+
+    #mainNav li a {display: inline; padding: 20px; }
+
+    #mainNav li:first-child { border-top: 0px; }
+
+    .logInButton {
+    	width: 170px;
+      height: 20px;
+    	margin-top: 0;
+      margin-bottom: 0;
+    }
+
+
+  .footerCon {
+    height: 140px;
+    display: grid;
+    grid-template-columns: 1.5fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-gap: 10px;
+
+    grid-template-areas:
+      "MainNavCon SubNavCon"
+      "MainNavCon SubNavCon"
+  }
+  #MainNavCon { grid-area: MainNavCon; }
+  #SubNavCon { grid-area: SubNavCon; }
+
+  #copyRight { font-size: 14px; }
+
 }
