--- a/css/main.css
+++ b/css/main.css
@@ -118,6 +118,25 @@ main { width: 100%; background-color: #EAFBFF;}
 
 #mainNav li a:hover { background-color: #fff; color: #2472B8;}
 
+.button {
+	display: block;
+	width: 140px;
+  background-color: #E10B14;
+	color: #fff;
+  border-radius: 5px;
+	padding: 10px 0;
+
+	text-align: center;
+	text-decoration: none;
+	font-size: 20px;
+  font-weight: 800;
+	margin: auto auto 20px auto;
+}
+
+.button:hover {
+	background-color: #fff;
+  color: #E10B14;
+}
 
 .logInButton {
   text-decoration: none;
@@ -519,6 +538,73 @@ main { width: 100%; background-color: #EAFBFF;}
   color: #E10B14;
 }
 
+/* CONTACT US*/  /* ----------- Main Banner starts --------   */
+
+#contactCon{
+  padding: 10px;
+  margin: 0 auto;
+  background-color: #A6E3F0;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.formHeadBlock {
+  margin: auto 0;
+  padding: 0 3em 0 3em;
+}
+
+
+.formHeadBlock h2 {
+  text-align: center;
+  font-size: 3em;
+	font-weight: bold;
+	color: #E10B14;
+}
+
+.formHeadBlock p {
+  text-align: center;
+	color: #312783;
+}
+
+.formBlock {
+  box-sizing: border-box;
+  width: 80%;
+  margin: auto;
+  padding: 1em;
+}
+
+form {
+  align-items: center;
+  justify-content: center;
+
+  width: 100%;
+  font-size: 1.3em;
+  color: #ccc;
+  padding: 1em;
+  margin: 0 auto;
+}
+
+form p {font-weight: 800;}
+
+input, textarea, select {
+  outline: none;
+  border: 0;
+}
+
+.contactForm { color: #312783}
+
+.field {
+  margin: 0.5em auto 0.5em auto;
+  font-family: "ROBOTO", Arial, Helvetica, sans-serif;
+  border-radius: 3px;
+  color: #2472B8;
+  padding: 10px;
+  width: 80%;
+}
+
 /* ----------- screens diplay - Responsive --------   */
 
 @media screen and (min-width: 640px) {
@@ -648,6 +734,13 @@ main { width: 100%; background-color: #EAFBFF;}
   }
   #shieldTextConHide > .historyText p span {
     color: #A6E3F0;
+  }
+
+  /* ----------- Contact us bodyContainer starts --------   */
+  #contactCon {
+    max-width: 700px;
+    margin: 1em auto;
+    border-radius: 10px;
   }
 
 }
