--- a/css/main.css
+++ b/css/main.css
@@ -247,7 +247,6 @@ main { width: 100%; background-color: #EAFBFF;}
   45% { opacity: 100%;}
   90% { opacity: 100%;}
   100% { opacity: 0%;}
-
 }
 
 .textBannerBlock h2 {
@@ -334,8 +333,6 @@ main { width: 100%; background-color: #EAFBFF;}
 
  .titleBeer{color: #312783;}
 
-
-
 /* our Beer*/  /* ----------- Main Banner starts --------   */
 
 #videoBannerCon {
@@ -353,16 +350,17 @@ main { width: 100%; background-color: #EAFBFF;}
   margin: auto;
   width: 100%;
 
-  animation: videoBtn 4s steps(10) infinite;
+  animation: videoBtn 15s steps(10) infinite;
 }
 
 @keyframes videoBtn {
-  0% { transform: scale(1);}
-  10% { transform: scale(1.1);}
-  20% { transform: scale(0.9);}
-  30% { transform: scale(1.1);}
-  40% { transform: scale(1);}
-  100% { transform: scale(1);}
+  0% { transform: scale(0.7);opacity: 50%;}
+  2% { transform: scale(0.7);opacity: 50%;}
+  4% { transform: scale(1); opacity: 100%;}
+  6% { transform: scale(0.8);}
+  8% { transform: scale(1); opacity: 100%;}
+  10% { transform: scale(0.7); opacity: 50%;}
+  100% { transform: scale(0.7); opacity: 50%;}
 
 }
 
@@ -605,6 +603,60 @@ input, textarea, select {
   width: 80%;
 }
 
+/* LOG IN*/  /* ----------- Main Banner starts --------   */
+
+#loginFormsCon {width: 100%;}
+
+#logInCon{
+  padding: 10px;
+  margin: 0 auto;
+  background-color: #2472B8;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#logInCon h2, #updateCon h2, #updateCon p { color: #fff;}
+
+.logInForm p { margin-top:0.5em; color: #fff;}
+
+.linkTxt {
+  color: #fff;
+  text-decoration: underline;
+  text-align: center;
+}
+
+.linkTxt:hover {
+  font-weight: 800;
+  cursor: default;
+}
+
+#updateCon{
+  padding: 10px;
+  margin: 0 auto;
+  background-color: #E10B14;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#subscButton {
+  margin: 1em auto;
+  background-color: #2472B8;
+  color: #fff;
+}
+
+#subscButton:hover {
+  background-color: #fff;
+  color: #2472B8;
+}
+
+.logInImg {display: none;}
+
 /* ----------- screens diplay - Responsive --------   */
 
 @media screen and (min-width: 640px) {
@@ -743,6 +795,21 @@ input, textarea, select {
     border-radius: 10px;
   }
 
+  /* ----------- LOG IN bodyContainer starts --------   */
+  .loginHead {
+    display: flex;
+    flex-direction: row;
+  }
+  #loginFormsCon { width:60%;}
+  #logInImg {
+    display:block;
+    width:40%;
+
+    background-image: url(../images/hi-res_WEB/context/Web_login.jpg);
+  	background-repeat: no-repeat;
+  	background-position: center;
+    background-size: cover;
+  }
 }
 
 
